2008-03-09  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffe/Makefile.am (kaffe_bin_LDADD): 
	Removed OPT_DLOPEN_JAVA_LIBS.

	* configure.ac (OPT_JAVA_LIBS, OPT_DLOPEN_JAVA_LIBS): Removed.

2008-03-09  Dalibor Topic  <robilad@kaffe.org>

	* m4/gwqt.m4: Removed.

2008-03-09  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW, TODO: Updated.

2008-03-09  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed old kaffe AWT configuration mechanism.

	* Makefile.am (EXTRA_DIST): Removed FAQ.awt.

	* libraries/clib/Makefile.am (MAYBE_NATIVE_AWT_DIR): Removed.
	(SUBDIRS) Removed MAYBE_NATIVE_AWT_DIR.

	* kaffe/kaffe/Makefile.am (AM_CFLAGS): Removed AWT includes.

	* libraries/javalib/Makefile.am (SUBIDRS): Removed AWT implementations.

	* FAQ/FAQ.awt,
	libraries/clib/awt/,
	libraries/clib/awt/.cvsignore,
	libraries/clib/awt/win32/clr.cpp,
	libraries/clib/awt/win32/lbl.cpp,
	libraries/clib/awt/win32/imgjpeg.cpp,
	libraries/clib/awt/win32/imggif.cpp,
	libraries/clib/awt/win32/toolkit.hpp,
	libraries/clib/awt/win32/imgpng.cpp,
	libraries/clib/awt/win32/lst.cpp,
	libraries/clib/awt/win32/scroll.cpp,
	libraries/clib/awt/win32/wnd.cpp,
	libraries/clib/awt/win32/btn.cpp,
	libraries/clib/awt/win32/edit.cpp,
	libraries/clib/awt/win32/gra.cpp,
	libraries/clib/awt/win32/choice.cpp,
	libraries/clib/awt/win32/tlk.cpp,
	libraries/clib/awt/win32/img.cpp,
	libraries/clib/awt/win32/filedlg.cpp,
	libraries/clib/awt/win32/fnt.cpp,
	libraries/clib/awt/win32/cbd.cpp,
	libraries/clib/awt/win32/cmnwnd.cpp,
	libraries/clib/awt/win32/widget.cpp,
	libraries/clib/awt/win32/tlkprops.hpp,
	libraries/clib/awt/win32/cmnwnd.hpp,
	libraries/clib/awt/win32/evt.cpp,
	libraries/clib/awt/win32/menu.cpp,
	libraries/clib/awt/xynth/event.c,
	libraries/clib/awt/xynth/font.c,
	libraries/clib/awt/xynth/window.c,
	libraries/clib/awt/xynth/graphic.c,
	libraries/clib/awt/xynth/image.c,
	libraries/clib/awt/xynth/color.c,
	libraries/clib/awt/xynth/toolkit.h,
	libraries/clib/awt/xynth/Makefile.in,