@@ -1,3 +1,10 @@
+2008-08-29  Kiyo Inaba <inaba@src.ricoh.co.jp>
+	* config/arm/jit.h,
+	config/arm/jit3-arm.def,
+	config/arm/jit3-icode.h,
+	config/arm/netbsd1/jit-md.h,
+	config/arm/netbsd1/md.h: Partial work to make ji3 work on NB4.
+
 2008-03-09  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffe/Makefile.am (kaffe_bin_LDADD): 
